[project]
name = "pykarstnsim-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.11.9",
    "pykarstnsim@git+ssh://git@github.com/ISSKA/pykarstnsim.git",
    "shapely>=2.1.2",
]

[tool.uv.sources]
pykarstnsim = { git = "ssh://git@github.com/ISSKA/pykarstnsim.git" }
pykarstnsim-demo = { workspace = true }

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pykarstnsim-demo",
]


